[alignment fix] Update class names
fix for latest version of spotify

--- a/user.css
+++ b/user.css
@@ -1989,11 +1989,11 @@ option {
   padding-left: 10px;
 }
 
-.main-trackList-rowSectionVariable[aria-colindex="3"] .ebHsEf, .main-trackList-rowSectionVariable[aria-colindex="3"] .jsV182e49Puwz9SIYt2J {
+.main-trackList-rowSectionVariable[aria-colindex="3"] .cPwEdQ , .main-trackList-rowSectionVariable[aria-colindex="3"] .jsV182e49Puwz9SIYt2J {
   padding-left: 8.5px;
 }
 
-.main-trackList-rowSectionVariable[aria-colindex="4"] .hHrtFe {
+.main-trackList-rowSectionVariable[aria-colindex="4"] .eDbSCl  {
   padding-left: 14.5px;
 }
 
